--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cryptocoincrunch",
-  "version": "2.0.6",
+  "version": "0.2.0",
   "description": "CryptoCoinCrunch - Crypto Tracking Dashboard",
   "author": "Justin Formentin",
   "homepage": "https://cryptocoincrunch.com",
@@ -12,30 +12,25 @@
     "url": "git@github.com:justinformentin/crypto-tracking-dashboard"
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.4",
-    "@coreui/icons": "0.2.0",
-    "@coreui/react": "^2.0.4",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
+    "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "font-awesome": "^4.7.0",
+    "moment": "^2.19.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.4.1",
-    "react-loadable": "^5.4.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
+    "react-select": "^1.2.1",
     "react-test-renderer": "^16.4.1",
-    "reactstrap": "^6.1.0",
-    "simple-line-icons": "^2.4.1",
     "react-twitter-widgets": "^1.7.1",
-    "recharts": "^1.0.0-beta.10",
-    "moment": "^2.19.2",
-    "css-loader": "^0.28.7",
-    "axios": "^0.18.0",
-    "react-custom-scrollbars": "^4.2.1"
+    "reactstrap": "^6.1.0",
+    "recharts": "^1.0.0-beta.10"
   },
   "devDependencies": {
     "babel-jest": "^23.0.1",
